--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@ header {
    
 }
 
-.button {
-    
-}
-
 nav {
      display: flex; 
      justify-content: center;
@@ -25,10 +21,6 @@ nav {
 
 .nav-link {
     text-decoration: none;
-}
-
-h1 {
-
 }
 
 p {
@@ -44,7 +36,7 @@ p {
 article {
    background-color: white;
    margin: 10px;
-   padding: 10px;
+   padding: 15px;
    width: 500px;
    color: black;
 }
@@ -64,12 +56,6 @@ footer {
    
 }
 
-footer a {
-    
-}
-
-footer p {
-}
 h1{
     text-align: center;
     
@@ -85,4 +71,16 @@ h3{
     border: 8px solid wheat;
     border-radius: 40px;
     padding: 10px;
+}
+
+article a{
+    text-decoration: none;
+    color: #804FC1;
+    font-size: 20px;
+    margin: 40px;
+    padding: 5px;
+    border: 2px solid #804FC1;
+}
+article img{
+    margin: 20px;
 }
